--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.2.13", features = ["sync", "macros", "net", "tcp", "stream", "rt-threaded"] }
+tokio = { version = "0.2.13", features = ["sync", "macros", "net", "tcp", "stream", "rt-threaded", "time"] }
 pretty_env_logger = "0.4.0"
 log = "0.4.8"
 futures = "0.3.4"
