--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
 async-stream = "0.2.1"
 async-trait = "0.1.30"
 enclose = "1.1.8"
@@ -20,4 +21,9 @@ tokio = {version = "0.2.13", features = ["sync", "macros", "net", "tcp", "stream
 tokio-util = {version = "0.3.0", features = ["codec"]}
 tonic = {version = "0.2.0"}
 tonic-build = "0.2"
+tracing = "0.1"
+tracing-subscriber = "0.2"
 uuid = {version = "0.8.1", features = ["v4"]}
+
+[profile.release]
+debug = true
