--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,11 @@ anyhow = "1.0"
 async-stream = "0.2.1"
 async-trait = "0.1.30"
 enclose = "1.1.8"
+evmap = "10.0.2"
 futures = "0.3.4"
 futures-core = "0.3.4"
 futures-util = "0.3.4"
+linked_hash_set = "0.1.4"
 log = "0.4.8"
 pretty_env_logger = "0.4.0"
 prost = "0.6"
