--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 anyhow = "1.0"
 async-stream = "0.2.1"
 async-trait = "0.1.30"
+bytes = "0.5"
 chrono = "0.4"
 enclose = "1.1.8"
 env_logger = "*"
