--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde = {version = "1.0", features = ["derive"]}
 test-env-log = "0.2.2"
 tokio = {version = "0.2.13", features = ["sync", "macros", "net", "tcp", "stream", "rt-threaded", "time"]}
 tokio-util = {version = "0.3.0", features = ["codec"]}
+toml = "0.5"
 tonic = {version = "0.2.0"}
 tonic-build = "0.2"
 tracing = "0.1"
