Support broadcast + refacto request headers + refacto proto with primitive convertion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures-core = "0.3.4"
 futures-util = "0.3.4"
 linked_hash_set = "0.1.4"
 log = "0.4.8"
+num_enum = "0.5.1"
 pretty_env_logger = "0.4.0"
 prost = "0.6"
 rocket = "0.4"
