--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Tag version
         id: slug-version
-        run: echo ::set-output name=VERSION::${{ GITHUB_REF/refs\/tags\// }}
-        shell: bash
+        run: echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}"
       - name: Build and push Docker images
         uses: docker/build-push-action@v1
         with:
