--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -20,5 +20,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-          tags: ${{ steps.slug-version.outputs.VERSION }} , latest
+          tags: ${{ DOCKER_REPO }}:${{ steps.slug-version.outputs.VERSION }} , latest
           push: true
