--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -23,6 +23,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+          context: .
+          file: ./Dockerfile
           tags: |
             ${{ secrets.DOCKER_REPO }}:${{ steps.slug-version.outputs.VERSION }}
             ${{ secrets.DOCKER_REPO }}:latest
