--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -19,7 +19,7 @@ jobs:
         id: docker-meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images: ${{ secrets.DOCKER_REPO }}
+          tag-match: v(.*)
       # - name: Prepare repository Docker
       #   run: |
       #     echo IMAGE_REPOSITORY=toto >> $GITHUB_ENV
@@ -28,11 +28,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-          context: .
-          file: ./Dockerfile
           tags: ${{ steps.docker-meta.outputs.tags }}
           labels: ${{ steps.docker-meta.outputs.labels }}
           push: true
+          repository: ${{ secrets.DOCKER_REPO }}
 
   # ${{ secrets.DOCKER_REPO }}:${{ steps.slug-version.outputs.VERSION }}
   # ${{ secrets.DOCKER_REPO }}:latest
