--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -12,14 +12,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      # - name: Tag version
-      #   id: slug-version
-      #   run: echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}"
-      - name: Prepare repository images
-        id: docker-meta
-        uses: crazy-max/ghaction-docker-meta@v1
-        with:
-          tag-match: v(.*)
+      - name: Tag version
+        id: slug-version
+        run: echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}"
+      # - name: Prepare repository images
+      #   id: docker-meta
+      #   uses: crazy-max/ghaction-docker-meta@v1
+      #   with:
+      #     tag-match: v(.*)
       # - name: Prepare repository Docker
       #   run: |
       #     echo IMAGE_REPOSITORY=toto >> $GITHUB_ENV
@@ -28,7 +28,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-          tags: ${{ steps.docker-meta.outputs.tags }}
+          tags: ${{ steps.slug-version.outputs.VERSION }}, latest
+          # tags: ${{ steps.docker-meta.outputs.tags }}
           labels: ${{ steps.docker-meta.outputs.labels }}
           push: true
           repository: ${{ secrets.DOCKER_REPO }}
